# mathcore

./: CHANGELOG.md  Cargo.toml  MARKETING.md  README.md  awesome-rust-pr.md  social-media-posts.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: expression_bench.rs
examples/: demo.rs  optimization.rs  scientific_computing.rs
examples/wasm_eval/: Cargo.toml  README.md
examples/wasm_eval/src/: lib.rs
src/: lib.rs
src/calculus/: limits.rs  mod.rs
src/differential/: mod.rs
src/engine/: mod.rs
src/matrix/: mod.rs
src/ml/: mod.rs
src/parser/: mod.rs
src/precision/: mod.rs
src/solver/: mod.rs
src/transforms/: mod.rs
src/types/: mod.rs
tests/: integration_test.rs
