[package]
name = "mathcore"
version = "0.3.1"
edition = "2021"
authors = ["Mehmet Yilmaz <mehmet@nonanti.dev>"]
description = "Symbolic math library and computer algebra system for Rust"
license = "MIT"
repository = "https://github.com/Nonanti/mathcore"
keywords = ["math", "symbolic", "algebra", "calculus", "cas"]
categories = ["mathematics", "science"]

[dependencies]
nom = { version = "7.1", default-features = false, features = ["alloc"] }
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
nalgebra = { version = "0.32", default-features = false, features = ["alloc", "libm"] }
ndarray = { version = "0.15", default-features = false, optional = true }
thiserror = { version = "2.0", default-features = false }

# std-only dependencies
rayon = { version = "1.7", optional = true }
rustfft = { version = "6.1", optional = true }

[features]
default = ["std", "parallel", "fft"]
std = [ "nalgebra/std", "ndarray?/std", "nom/std", "thiserror/std"]
parallel = ["rayon", "std"]
fft = ["rustfft", "std"]
full = ["std", "parallel", "fft"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
approx = "0.5"
proptest = { version = "1.4", default-features = false, features = ["no_std", "alloc"] }


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Explicit expression bench is the only one we care to run
# so disable the default harness that would run for lib.
# This makes it possible to run `cargo bench` and assume criterion so for example
# `cargo bench --quick` will run the expression bench with quick settings.
[lib]
bench = false

[profile.bench]
inherits = "release"

[[bench]]
name = "expression_bench"
harness = false
